<resources>
    <string name="app_name">Agenda</string>
    <string name="welcome">Olá, %1$s</string>
    <string name="make_reservation">Fazer reserva</string>
    <string name="you_didnt_make_your_reservation">Você ainda não fez a sua reserva.</string>
    <string name="txt_reservation_name">A reserva será realizada em seu nome</string>
    <string name="txt_make_reservation">Faça sua reserva</string>
    <string name="txt_info_person">Informações pessoais</string>
    <string name="txt_name">Nome</string>
    <string name="txt_document">CPF</string>
    <string name="txt_info_adress">Endereço</string>
    <string name="txt_postal_code">CEP</string>
    <string name="txt_street">Logradouro</string>
    <string name="txt_number">Número</string>
    <string name="txt_complement">Complemento</string>
    <string name="txt_city">Cidade</string>
    <string name="txt_state">UF</string>
    <string name="tx_make_reservation">Fazer reserva</string>
    <string name="txt_neighborhood">Bairro</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Nome deve ter ao menos 3 caracteres</string>
    <string name="invalid_document">CPF deve conter 11 caracteres</string>
    <string name="invalid_password">Senha deve ter no mínimo 8 caracteres</string>
    <string name="password_not_equal">Senha e confirmar senha devem ser iguais</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter">Entrar</string>
    <string name="password">Senha</string>
    <string name="e_mail">E-mail</string>
    <string name="does_not_have_account">Não possui uma conta?<b><font color='#000000'> Cadastre-se</font></b></string>
    <string name="register">Cadastrar</string>
    <string name="already_has_account">Já possui uma conta? <b><font color='#000000'>Faca login.</font></b></string>
    <string name="name">Nome</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="document">CPF</string>
    <string name="send">Enviar</string>
    <string name="invalid_email">E-mail inválido.</string>
    <string name="you_havent_made_your_reservation">Você ainda não fez sua reserva.</string>
    <string name="here_is_your_reservation">Aqui estão suas reservas.</string>
    <string name="ciaf_text">CIAF \nCentro Integrado \n de Apoio a Familia</string>
    <string name="secretaria_txt">Secretaria \n da Familia</string>
</resources>